// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEPRECATED_InputField should render a basic text input 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <label
    class="control-label"
    for="id-input-2"
  >
    label
  </label>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-2"
      placeholder="placeholder"
      type="text"
      value="value"
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a help text 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-5"
      type="text"
      value="value"
    />
  </div>
  <small
    class="form-text text-muted"
  >
    help text
  </small>
</div>
`;

exports[`DEPRECATED_InputField should render a hidden text input 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      hidden=""
      id="id-input-11"
      type="text"
      value="value"
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a lowercase value and convert any uppercase input to lowercase 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-14"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a number input with an onChange handler, and call this handler on change 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-10"
      type="number"
      value="value"
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a required text input 1`] = `
<div
  class="InputField required form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-3"
      required=""
      type="text"
      value="value"
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a text input with a right addon 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class="input-group"
  >
    <input
      class="field form-control"
      id="id-input-8"
      type="text"
      value="value"
    />
    <span
      class="input-group-append"
    >
      <span
        class="input-group-text inputGroupText"
      >
        @rightaddon.io
      </span>
    </span>
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a text input with a suffix 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class="with-suffix"
  >
    <input
      class="field form-control"
      id="id-input-12"
      suffix="px"
      type="text"
      value="value"
    />
    <div
      class="input-suffix-wrapper"
    >
      <div
        class="spacer"
      >
        value
      </div>
      <div
        class="suffix"
      >
        px
      </div>
    </div>
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a text input with an onChange handler, and call this handler on change 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-9"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render a tooltip next to the label 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class="label-wrapper"
  >
    <label
      class="control-label"
      for="id-input-6"
    >
      Label
    </label>
    <span
      id="id-input-6-tooltip"
    >
      <i
        class="material-icons-outlined tooltip"
      >
        info
      </i>
    </span>
  </div>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-6"
      type="text"
      value="value"
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render an inline required text input 1`] = `
<div
  class="InputField required d-inline-block form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-7"
      required=""
      type="text"
      value="value"
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render an inline text input 1`] = `
<div
  class="InputField d-inline-block form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-4"
      type="text"
      value="value"
    />
  </div>
</div>
`;

exports[`DEPRECATED_InputField should render the input with an error 1`] = `
<div
  class="InputField form-group"
  color="danger"
>
  <div
    class=""
  >
    <input
      class="field form-control-danger is-invalid form-control"
      id="id-input-13"
      type="text"
      value="value"
    />
    <div
      class="invalid-feedback"
    >
      the value is wrong
    </div>
  </div>
</div>
`;

exports[`DEPRECATED_InputField should use default props 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <input
      class="field form-control"
      id="id-input-1"
      type="text"
      value="value"
    />
  </div>
</div>
`;
